<resources>
    <string name="app_name">xuefei1-FuelTrack</string>
    <string name="action_settings">Settings</string>
    <string name="delete_title_en">Delete Log</string>
    <string name="delete_msg_en">Are you sure you want to delete this log?</string>
    <string name="yes_en">Yes</string>
    <string name="no_en">No</string>
    <string name="ok_en">Ok</string>
    <string name="cancel_en">Cancel</string>
    <string name="save_en">Save</string>
    <string name="add_new_log_title_en">CREATE A NEW LOG</string>
    <string name="edit_log_title_en">EDIT LOG</string>
    <string name="amount_title_en">Amount:</string>
    <string name="amount_hint_en">Enter the amount of fuel in Liters</string>
    <string name="unit_price_title_en">Gas Price:</string>
    <string name="unit_price_hint_en">Enter the gas price in cents/L</string>
    <string name="type_title_en">Fuel Type:</string>
    <string name="type_hint_en">Enter the fuel type</string>
    <string name="station_title_en">Gas Station:</string>
    <string name="station_hint_en">Enter the name of the gas station</string>
    <string name="odometer_title_en">Odometer:</string>
    <string name="odometer_hint_en">Enter the odometer reading</string>
    <string name="date_title_en">Date:</string>
    <string name="date_hint_en">Enter the odometer reading</string>
    <string name="error_title_en">Error</string>
    <string name="incomplete_msg_en">Invalid input for </string>
    <string name="abort_title_en">Discard Log</string>
    <string name="abort_msg_en">All unsaved changes will be lost, continue?</string>
    <string name="new_log_en">+ New Log</string>
    <string name="no_logs_en">You don\'t have any log(s)</string>
</resources>
