<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pure_white">

    <ScrollView
        android:id="@+id/scrollview_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent" >

        <LinearLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_padding"
            android:paddingTop="@dimen/spacing_padding" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingEnd="@dimen/title_padding"
                    android:paddingLeft="@dimen/title_padding"
                    android:paddingRight="@dimen/title_padding"
                    android:paddingStart="@dimen/title_padding"
                    android:text="@string/add_new_log_title_en"
                    android:textColor="@color/mat_grey_dark"
                    android:textSize="@dimen/typo_title"
                    android:id="@+id/tv_main_title"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/mat_grey_normal"/>

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingEnd="@dimen/title_padding"
                    android:paddingLeft="@dimen/title_padding"
                    android:paddingRight="@dimen/title_padding"
                    android:paddingStart="@dimen/title_padding"
                    android:text="@string/amount_title_en"
                    android:textColor="@color/mat_grey_dark"
                    android:textSize="@dimen/typo_title"
                    />

                <EditText
                    android:id="@+id/et_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_padding"
                    android:layout_marginRight="@dimen/spacing_padding"
                    android:hint="@string/amount_hint_en"
                    android:maxLength="20"
                    android:textColor="@color/mat_grey_dark"
                    android:textSize="@dimen/typo_univ"
                    android:inputType="numberDecimal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingEnd="@dimen/title_padding"
                    android:paddingLeft="@dimen/title_padding"
                    android:paddingRight="@dimen/title_padding"
                    android:paddingStart="@dimen/title_padding"
                    android:paddingTop="@dimen/padding_medium"
                    android:text="@string/unit_price_title_en"
                    android:textColor="@color/mat_grey_dark"
                    android:textSize="@dimen/typo_title"
                    />

                <EditText
                    android:id="@+id/et_unit_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_padding"
                    android:layout_marginRight="@dimen/spacing_padding"
                    android:hint="@string/unit_price_hint_en"
                    android:maxLength="20"
                    android:textColor="@color/mat_grey_dark"
                    android:textSize="@dimen/typo_univ"
                    android:inputType="numberDecimal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingEnd="@dimen/title_padding"
                    android:paddingLeft="@dimen/title_padding"
                    android:paddingRight="@dimen/title_padding"
                    android:paddingStart="@dimen/title_padding"
                    android:paddingTop="@dimen/padding_medium"
                    android:text="@string/type_title_en"
                    android:textColor="@color/mat_grey_dark"
                    android:textSize="@dimen/typo_title"
                    />

                <EditText
                    android:id="@+id/et_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_padding"
                    android:layout_marginRight="@dimen/spacing_padding"
                    android:hint="@string/type_hint_en"
                    android:maxLength="20"
                    android:textColor="@color/mat_grey_dark"
                    android:textSize="@dimen/typo_univ" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingEnd="@dimen/title_padding"
                    android:paddingLeft="@dimen/title_padding"
                    android:paddingRight="@dimen/title_padding"
                    android:paddingStart="@dimen/title_padding"
                    android:paddingTop="@dimen/padding_medium"
                    android:text="@string/station_title_en"
                    android:textColor="@color/mat_grey_dark"
                    android:textSize="@dimen/typo_title"
                    />

                <EditText
                    android:id="@+id/et_station"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_padding"
                    android:layout_marginRight="@dimen/spacing_padding"
                    android:hint="@string/station_hint_en"
                    android:maxLength="20"
                    android:textColor="@color/mat_grey_dark"
                    android:textSize="@dimen/typo_univ" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingEnd="@dimen/title_padding"
                    android:paddingLeft="@dimen/title_padding"
                    android:paddingRight="@dimen/title_padding"
                    android:paddingStart="@dimen/title_padding"
                    android:paddingTop="@dimen/padding_medium"
                    android:text="@string/odometer_title_en"
                    android:textColor="@color/mat_grey_dark"
                    android:textSize="@dimen/typo_title"
                    />

                <EditText
                    android:id="@+id/et_odometer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_padding"
                    android:layout_marginRight="@dimen/spacing_padding"
                    android:hint="@string/odometer_hint_en"
                    android:maxLength="20"
                    android:textColor="@color/mat_grey_dark"
                    android:textSize="@dimen/typo_univ"
                    android:inputType="numberDecimal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingEnd="@dimen/title_padding"
                    android:paddingLeft="@dimen/title_padding"
                    android:paddingRight="@dimen/title_padding"
                    android:paddingStart="@dimen/title_padding"
                    android:paddingTop="@dimen/padding_medium"
                    android:text="@string/date_title_en"
                    android:textColor="@color/mat_grey_dark"
                    android:textSize="@dimen/typo_title"
                    />

                <Button
                    android:id="@+id/btn_date_picker"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="@dimen/padding_small_plus"
                    android:layout_marginBottom="@dimen/padding_medium"
                    android:layout_marginLeft="@dimen/spacing_padding"
                    android:layout_marginRight="@dimen/spacing_padding"
                    android:layout_weight="65"
                    android:background="@drawable/picker_selector"
                    android:gravity="center"
                    android:text="Button"
                    android:textColor="@color/pure_white"
                    android:textSize="@dimen/typo_univ"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>